repaired dark mode. Added margin:0 in both CSS .darkColors and .defaultColors

--- a/index.css
+++ b/index.css
@@ -62,8 +62,10 @@ img.images {
 .darkColors {
 	background-color: black;
 	color: gray;
+	margin: 0;
 }
 
 .defaultColors {
 	background-color: burlywood;
+	margin: 0;
 }
